[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx"
version = "1.0.0"
description = "CTX Titanium Encryption Tool"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  {name = "DAVID", email = "besoklibur457@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/IM-VIMC/ctx"
Bug_Tracker = "https://github.com/IM-VIMC/ctx/issues"

[project.scripts]
ctx-x = "main:main_menu"

[tool.setuptools]
package-dir = {"" = "."}
py-modules = ["main", "config"]
packages = ["core", "kdf", "defense", "format", "tools"]
